--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dash = "^2.15.0"
 jupyter = "^1.0.0"
 ipywidgets = "^8.1.2"
 royalur = {path = "temp/royalur-0.0.7-py3-none-any.whl"}
+duckdb = "^0.10.0"
+polars = {extras = ["pyarrow"], version = "^0.20.15"}
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
