--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.8.3"
 huggingface-hub = "^0.20.3"
 dash = "^2.15.0"
 royalur = {path = "temp/royalur-0.0.7-py3-none-any.whl"}
+dash-bootstrap-components = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core"]
